# opencv-cuda

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  README.txt  build_container  build_image  cmake_command  compile_demos  launch_demo  launch_demo_cuda  run_bash  run_bash_container  run_cameracapture  run_demo  run_videocapture
include/: LaneDetector.hpp
results_aspire_v_15/: result_canny_cpu.txt  result_canny_gpu.txt  result_optical_flow_cpu.txt  result_optical_flow_gpu.txt  result_orb_cpu.txt  result_orb_gpu.txt
results_jetson/: result_canny_cpu.txt  result_canny_gpu.txt  result_optical_flow_cpu.txt  result_optical_flow_gpu.txt  result_orb_cpu.txt  result_orb_gpu.txt
results_lenovo_ideapad_330/: result_canny_cpu.txt  result_canny_gpu.txt  result_optical_flow_cpu.txt  result_optical_flow_gpu.txt  result_orb_cpu.txt  result_orb_gpu.txt
results_msi_pe70_6qe/: result_canny_cpu.txt  result_canny_gpu.txt  result_optical_flow_cpu.txt  result_optical_flow_gpu.txt  result_orb_cpu.txt  result_orb_gpu.txt
results_workstation/: result_canny_cpu.txt  result_canny_gpu.txt  result_optical_flow_cpu.txt  result_optical_flow_gpu.txt  result_orb_cpu.txt  result_orb_gpu.txt
results_workstation_tacens/: result_canny_cpu.txt  result_canny_gpu.txt  result_optical_flow_cpu.txt  result_optical_flow_gpu.txt  result_orb_cpu.txt  result_orb_gpu.txt
ros/src/opencv_cuda/: CMakeLists.txt  package.xml
ros/src/opencv_cuda/launch/: demo_orb.launch  demo_orb_cuda.launch
ros/src/opencv_cuda/src/: image_transport.cpp
src/: stereocapture.cpp  videocapture.cpp
src/canny/: cpu_processing.cpp  gpu_processing.cpp
src/dnn/: object_detection.cpp  run_object_detection  run_object_detection_cuda  run_object_detection_jetson  run_object_detection_jetson_cuda  run_object_detection_webcam  run_object_detection_webcam_cuda
src/lane_detector/: LaneDetector.cpp  cpu_processing.cpp  gpu_processing.cpp
src/optical_flow/: cpu_processing.cpp  gpu_processing.cpp
src/orb/: cpu_processing.cpp  gpu_processing.cpp
src/stereo_bm/: cpu_processing.cpp  gpu_processing.cpp
